# Sela

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  NOTES.md  README.md  TODO.md  current.md  perf.sh  speed_timeline.md
docs/: current.md  plans.md
io/: ast.txt  current.se  main.qi  test.qi  test.se  test2.qi  tokens.txt  tokens_new.txt
perf/: flamegraph.sh  full_loop.sh  instruments.sh  iter.sh  iteration.sh  single.sh  total.sh
src/: ast.rs  core.rs  diagnostics.rs  error.rs  lexer.rs  main.rs  parser.rs  pretty.rs  sema.rs  span.rs  tempCodeRunnerFile.rs  timing.rs  token.rs
src/ast/: assign.rs  binary.rs  binop.rs  comp.rs  kwbinop.rs  range.rs  string.rs  symbol.rs  unop.rs  vis.rs
src/core/: arena_pool.rs  atomic_bitvec.rs  name.rs  push_get.rs  scalb.rs  span.rs  tri_arena.rs  twin_arena.rs
src/diagnostics/: natural.rs  utils.rs
src/error/: natural.rs  utils.rs
src/lexer/: comments.rs  filtering.rs  numbers.rs  text.rs  vectorized.rs  whitespace.rs  words.rs
src/parser/: atoms.rs  basic.rs  binary.rs  control.rs  decl.rs  functions.rs  groups.rs  import.rs  items.rs  literal.rs  numbers.rs  operators.rs  properties.rs  ranges.rs  set.rs  text.rs  types.rs  unary.rs  variables.rs
src/parser/numbers/: float.rs  int.rs  radix_int.rs
src/pretty/: ast.rs  builder.rs  color.rs  error.rs  formatter.rs  node.rs  theme.rs
src/token/: keyword.rs  kind.rs  precedence.rs  span.rs
