[package]
name = "sela"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.7"
bumpalo = { version = "3.20.2", features = ["collections"] }
cargo-instruments = "0.4.17"
modular-bitfield = "0.13.1"
rayon = "1.12.0"
regex = "1.12.4"
regex-macro = "0.3.0"
smallvec = "1.15.1"
terminal_size = "0.4.3"
unicode-segmentation = "1.12.0"

# [profile.release]
# debug = true
# force-frame-pointers = true
